Added 'Updated_at' column in expenses table Edit expense - Data sent, change of amount

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="ic_education">&#xf19d;</string>
 
     <string name="pref_create_categories">areExpenseCategoriesAdded</string>
+    <string name="pref_expenses">expense_preferences</string>
 
     <string-array name="categories">
         <item>Shopping</item>
